--- a/naptrack/naptracker.html
+++ b/naptrack/naptracker.html
@@ -2,7 +2,7 @@
 <html>
     <head>
         <title>Nap Tracker</title>
-        <link rel = "stylesheet" href = "11-nap-tracker.css">
+        <link rel = "stylesheet" href = "naptracker.css">
         <link rel = "stylesheet" href= "star.css">
     </head>
         
@@ -58,7 +58,7 @@
 
                 </div>
             </div>
-            <script src = "11-nap-tracker.js"></script>
+            <script src = "naptracker.js"></script>
         </body>
     
 </html>
