Edited header link for nap scheduler

--- a/napschedule/napschedule.html
+++ b/napschedule/napschedule.html
@@ -90,7 +90,7 @@
             
             </div>
         </div>
-        <script src="calculations.js"></script>
+        <script src="napschedule.js"></script>
     </body>
 </html>
 
