Minor changes to nap scheduler

--- a/napschedule/napschedule.html
+++ b/napschedule/napschedule.html
@@ -5,10 +5,12 @@
         <link rel="stylesheet" href="napschedule.css">
     </head>
     <body>
-        <a href="/naptrack/1naptracker.html">
-            <img class="zzz-icon" src="/images/moon-zzz-fill.svg">
-            <div>Nap Tracker</div>
-        </a>
+        <div class="link-container">
+            <a href="/naptrack/naptracker.html">
+                <img class="zzz-icon" src="/images/moon-zzz-fill.svg">
+                <div class="link-to-tracker">Nap Tracker</div>
+            </a>
+        </div>
         <p class="title">
             Nap Scheduler
         </p>
