--- a/naptrack/naptracker.html
+++ b/naptrack/naptracker.html
@@ -7,10 +7,12 @@
     </head>
         
         <body>
-            <a href="/napschedule/napschedule.html">
-                <img class="clock-icon" src="/images/clock.png">
-                <div>Nap Scheduler</div>
-            </a>
+            <div class="link-container">
+                <a href="/napschedule/napschedule.html">
+                    <img class="clock-icon" src="/images/clock.png">
+                    <div class="link-to-scheduler">Nap Scheduler</div>
+                </a>
+            </div>
             <p class="title">Nap Tracker</p>
             <div class="background">
                 <div class = "nap-input-grid">
