--- a/napschedule/results.html
+++ b/napschedule/results.html
@@ -10,29 +10,35 @@
                 Nap Scheduler
             </p>
         </a>
-        <div class="command-box">
-            <div class="button-container">
-                <p>
-                    when you woke up
-                </p>
-                <div class="js-wake-time">
+        <div class="center">
+            <div class="command-box">
+                <div class="wake-bed-container">
+                    <p>
+                        when you woke up
+                    </p>
+                    <div class="wake-time">
+                        <div class="js-wake-time">
+                    </div>
+                    </div>
+                    <p>
+                        when you plan to go to bed
+                    </p>
+                    <div class="bed-time">
+                        <div class="js-bed-time">
+                    </div>
+                    </div>
                 </div>
-                <p>
-                    when you plan to go to bed
-                </p>
-                <div class="js-bed-time">
-                </div>
+            
             </div>
-        
-        </div>
-        <div class="ideal-nap-container">
-            <p>
-                Power Nap (~20 min)/Full Cycle Sleep (~90 min)
-                <div class="js-calculated">
+            <div class="ideal-nap-container">
+                <p>
+                    Power Nap (~20 min)/Full Cycle Sleep (~90 min)
+                    <div class="js-calculated">
 
-                </div>
-            </p>
+                    </div>
+                </p>
 
+            </div>
         </div>
     </body>
     <script src="napschedule.js"></script>
