--- a/naptrack/naptracker.html
+++ b/naptrack/naptracker.html
@@ -14,7 +14,8 @@
                 </a>
             </div>
             <p class="title">Nap Tracker</p>
-            <div class="background">
+            <div class="grid-container">
+            <div class="background-inputs">
                 <div class = "nap-input-grid">
                     <p>Nap Name</p>
                     <p>Date</p>
@@ -60,6 +61,7 @@
 
                 </div>
             </div>
+        </div>
             <script src = "naptracker.js"></script>
         </body>
     
