Front-end touch ups

--- a/napschedule/results.html
+++ b/napschedule/results.html
@@ -32,7 +32,9 @@
             </div>
             <div class="ideal-nap-container">
                 <p>
-                    Power Nap (~20 min)/Full Cycle Sleep (~90 min)
+                    <p class="ideal-nap">
+                        Ideal Nap Time
+                    </p>
                     <div class="js-calculated">
 
                     </div>
