--- a/napschedule/napschedule.html
+++ b/napschedule/napschedule.html
@@ -8,7 +8,7 @@
         <div class="link-container">
             <a href="/naptrack/naptracker.html">
                 <img class="zzz-icon" src="/images/moon-zzz-fill.svg">
-                <div class="link-to-tracker">Nap Tracker</div>
+                <!-- <div class="link-to-tracker">Nap Tracker</div> -->
             </a>
         </div>
         <p class="title">
