--- a/naptrack/naptracker.html
+++ b/naptrack/naptracker.html
@@ -10,7 +10,7 @@
             <div class="link-container">
                 <a href="/napschedule/napschedule.html">
                     <img class="clock-icon" src="/images/clock.png">
-                    <div class="link-to-scheduler">Nap Scheduler</div>
+                    <!-- <div class="link-to-scheduler">Nap Scheduler</div> -->
                 </a>
             </div>
             <p class="title">Nap Tracker</p>
