Created index.html and adjusted files accordingly

--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html>
     <head>
         <title> Nap Scheduler </title>
-        <link rel="stylesheet" href="napschedule.css">
+        <link rel="stylesheet" href="/napschedule/napschedule.css">
     </head>
     <body>
         <div class="link-container">
@@ -82,7 +82,7 @@
                         <option value="23">11:00 PM</option>
                     </select>
 
-                    <a href="results.html">
+                    <a href="/napschedule/results.html">
                         <button class="purple-button js-updated" onclick="saveTimes()">
                             set
                         </button>
@@ -92,7 +92,7 @@
             
             </div>
         </div>
-        <script src="napschedule.js"></script>
+        <script src="/napschedule/napschedule.js"></script>
     </body>
 </html>
 
