Fixed small error with links

--- a/naptrack/naptracker.html
+++ b/naptrack/naptracker.html
@@ -8,7 +8,7 @@
         
         <body>
             <div class="link-container">
-                <a href="/napschedule/napschedule.html">
+                <a href="/index.html">
                     <img class="clock-icon" src="/images/clock.png">
                     <!-- <div class="link-to-scheduler">Nap Scheduler</div> -->
                 </a>
