--- a/naptrack/naptracker.html
+++ b/naptrack/naptracker.html
@@ -8,8 +8,8 @@
         
         <body>
             <div class="link-container">
-                <a href="/index.html">
-                    <img class="clock-icon" src="/images/clock.png">
+                <a href="index.html">
+                    <img class="clock-icon" src="images/clock.png">
                     <!-- <div class="link-to-scheduler">Nap Scheduler</div> -->
                 </a>
             </div>
