--- a/index.html
+++ b/index.html
@@ -2,12 +2,12 @@
 <html>
     <head>
         <title> Nap Scheduler </title>
-        <link rel="stylesheet" href="/napschedule/napschedule.css">
+        <link rel="stylesheet" href="napschedule/napschedule.css">
     </head>
     <body>
         <div class="link-container">
-            <a href="/naptrack/naptracker.html">
-                <img class="zzz-icon" src="/images/moon-zzz-fill.svg">
+            <a href="naptrack/naptracker.html">
+                <img class="zzz-icon" src="images/moon-zzz-fill.svg">
                 <!-- <div class="link-to-tracker">Nap Tracker</div> -->
             </a>
         </div>
@@ -82,7 +82,7 @@
                         <option value="23">11:00 PM</option>
                     </select>
 
-                    <a href="/napschedule/results.html">
+                    <a href="napschedule/results.html">
                         <button class="purple-button js-updated" onclick="saveTimes()">
                             set
                         </button>
@@ -92,7 +92,7 @@
             
             </div>
         </div>
-        <script src="/napschedule/napschedule.js"></script>
+        <script src="napschedule/napschedule.js"></script>
     </body>
 </html>
 
