More link fixes

--- a/napschedule/results.html
+++ b/napschedule/results.html
@@ -5,7 +5,7 @@
         <link rel="stylesheet" href="results.css">
     </head>
     <body>
-        <a href="/index.html" class="header-link">
+        <a href="../index.html" class="header-link">
             <p class="title">
                 Nap Scheduler
             </p>
