Fixed an error with converting to standard time

--- a/index.html
+++ b/index.html
@@ -19,14 +19,14 @@
                 <p class="instructions">
                     Instructions:
                     input <strong>when you woke up</strong>, and <strong>when you plan to go to bed</strong>.
-                    finally, click calculate to see what the optimal time for you to take a nap is! (or see if it isn’t optimal at all)
+                    finally, click calculate to see when the optimal time for you to take a nap is! (or see if it isn’t optimal at all)
                 </p>
                 <div class="button-container">
                     <p>
                         when you woke up
                     </p>
                     <select id = "wake-time" class = "time-select">
-                        <option value="0">12:00AM</option>
+                        <option value="0">12:00 AM</option>
                         <option value="1">1:00 AM</option>
                         <option value="2">2:00 AM</option>
                         <option value="3">3:00 AM</option>
